changed the background color

--- a/src/index.css
+++ b/src/index.css
@@ -44,7 +44,7 @@ button:focus {
 
 .new-note {
   cursor: pointer;
-  background-color: #4A4E74;
+  background-color: #c85320;
   border: none;
   color: white;
   border-radius: 3px;
